# CUDA-NN

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml
src/: CMakeLists.txt  dataset.cu  dataset.hh  kernel-profiling.txt  main.cu  main.py  makefile  nn.cu  nn.hh  results.txt  torch_main.cpp
src/layers/: layer.hh  linear_layer.cu  linear_layer.hh  relu_layer.cu  relu_layer.hh  sigmoid_layer.cu  sigmoid_layer.hh
src/utils/: bce_loss.cu  bce_loss.hh  matrix.cu  matrix.hh  shape.cu
